# argocd-sync-tag

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: build.yml
src/: api.rs  app.rs  cli.rs  controller.rs  error.rs  main.rs
