[package]
name = "argo-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.61"
serde = { version = "1.0.198", features = ["derive"] }
log = "0.4.21"
config = "0.14.0"
env_logger = "0.11.3"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.82"
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
